version 2.0-beta XX-Nov-2011
. [NEW] All: forward-ported changes from v1.1 branch like reorderSprite, TMX parse from memory, events fixes, Particle batches, ARC compatible and more.
            See v1.1 changes for further info.
. [NEW] Director: Added API to display Milliseconds Per Frame
. [NEW] LabelBMFont: Added support for alignment, also in multiline
. [NEW] Node: Added glServerState property. Ideal to enable/disabled blending for certain nodes.
. [NEW] Shader: Added AlphaTesting shader
. [FIX] Node#draw() Added helper macro to setup draw
. [FIX] Node#draw() removed [super draw]. Draw() should be "atomic". It shall not depend on a possible state of super class.
. [FIX] ccGLState: Added cache for texture unit and GL_BLEND
. [FIX] SpriteFrameCache: readded API to create spriteFrames from CCTexture2D
. [FIX] Paticles: Faster initialization: texCoords are generated only once.

version 2.0-alpha 18-Sept-2011
. [NEW] Action: Added new CallBlockO action
. [NEW] AtlasNode: added init method
. [NEW] ccConfig: removed CC_USES_VBO since VBO is always used
. [NEW] ccConfig: removed CC_OPTIMIZE_BLEND_FUNC_FOR_PREMULTIPLIED_ALPHA since the ccBlendFunctions keeps state
. [NEW] ccConfig: removed CC_SPRITEBATCHNODE_DEBUG_DRAW. CC_SPRITE_DEBUG_DRAW can be used both for batches and non batches.
. [NEW] ccConfig: renamed CC_COCOSNODE_RENDER_SUBPIXEL to CC_NODE_RENDER_SUBPIXEL
. [NEW] ccGLState: added helper functions that keeps the GL state
. [NEW] CProgressTimer: 
            - Convenience class constructor now passes in CCSprite (this gives developers easier access to timer with CCSpriteFrames, CCSprites, etc)
            - Reduced the progress timer types to just radial and bar - added in reverse, midpoint, barChangeRate to be have more flexible options to modify the progress.
			- Supports Tint + Color
. [NEW] Director: Removed Fast, FastThreaded and NSTimer director. The only one available is DisplayLink.