@@ -1,6 +1,10 @@
 version 2.0-beta XX-Nov-2011
-. [NEW] All: forward-ported changes from v1.1 branch like reorderSprite, TMX parse from memory, events fixes, Particle batches, ARC compatible and more.
-            See v1.1 changes for further info.
+. [NEW] All: forward-ported changes from v1.1 branch:
+		reorderSprite: faster reordering sprites/nodes
+		Particle batches: Particles support batch rendering
+		TMX parse from memory
+		events fixes
+		ARC compatible:
 . [NEW] Director: Added API to display Milliseconds Per Frame
 . [NEW] LabelBMFont: Added support for alignment, also in multiline
 . [NEW] Node: Added glServerState property. Ideal to enable/disabled blending for certain nodes.
